# erebor-solana

./: .gitignore  AI_PLAN.md  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  EVM_VAULT_SPEC.md  FOLLOWUPS.md  FRONTEND.md  FRONTEND_PLAN.md  LICENSE.md  MISMATCHES.md  OVERVIEW.md  PLAN.md  PORT_PROGRESS.md  README.md  REFACTOR_PLAN.md  TASKS.md  TEST_PLAN.md  id.json  netlify.toml  overview.md  package.json
agent/: .env.example  IMPLEMENTATION_SPEC_KAMINO_AGENT.md  package.json  tsconfig.json
agent/kamino_looper/: .env.example  TODO.md  package.json
agent/lulo/: LULO.md  package.json  tsconfig.json
agent/shared/: tsconfig.json  types.ts  vault-client.ts
agent/src/: config.ts  index.ts  llm-advisor.ts  monitor.ts  strategy.ts  types.ts  vault-client.ts
agent/tests/: config.test.ts  llm-advisor.test.ts  monitor.test.ts  strategy.test.ts  vault-client.test.ts
app/: .env.local.example  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: DEPLOYMENT.md  E2E_KAMINO.md  FOLLOWUPS.md  FRONTEND.md  FRONTEND_PLAN.md  MISMATCHES.md  OVERVIEW.md  PLAYWRIGHT_PLAN.md  PORT_PROGRESS.md  SOLANA_VAULT_SPEC.md  TASKS.md
programs/mock_kamino/: Cargo.toml
programs/mock_kamino/src/: lib.rs
programs/mock_pyth/: Cargo.toml
programs/mock_pyth/src/: lib.rs
scripts/: README.md  bootstrap-test-wsol-defi-alpha.ts  bootstrap-wsol-defi-alpha.ts  check-mock-feeds.ts  crank-mock-prices.ts  crank-yield.ts  create-strategies.ts  create-vault.ts  deploy.sh  dump-deployment.ts  e2e-accept-admin.ts  e2e-kamino.ts  e2e-propose-admin.ts  e2e-scenario-allowed-token.ts  e2e-scenario-kamino-loop.ts  emit-test-event.ts  init-allowed-token.ts  init-kamino-position.ts  init-mock-feeds.ts  init-protocol-config.ts  init-strategy-ctoken-ata.ts  init-vault.ts  metaplex-metadata.ts  mint-defi-alpha.ts  mint-mvp-tokens.ts  mint-test-token-defi-alpha.ts  mint-test-usdt-defi-alpha.ts  mint-to-wallet.ts  mint-wsol-defi-alpha.ts  mvp-token-list.ts  read-kamino-position.ts  repair-defi-alpha-value-sources.ts  seed-allowed-tokens.ts  seed-demo-strategies.ts  seed-vault-allowed-tokens.ts  settle-defi-alpha.ts  setup-demo-faucet.ts  setup-demo-vault.ts  setup-devnet.ts  setup-full.ts  (+8 more)
tests/: my_project.ts  preset_kamino_liquidity.ts  preset_lulo_lending.ts  preset_raydium_swapper.ts  pyth_value_source.ts  security.ts
tests/helpers/: fixtures.ts  (+2 more)
(+183 files in other folders)
