[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin crates that publish edition2024 versions incompatible with cargo-build-sbf (Cargo 1.75)
[workspace.dependencies]
constant_time_eq = "=0.3.1"
toml_datetime = "=0.6.11"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
