[package]
name = "mock_kamino"
version = "0.1.0"
description = "Mock Kamino lending market for devnet testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_kamino"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
