[package]
name = "mock_kamino"
version = "0.1.0"
description = "Mock Kamino Lend program for E2E testing of Erebor's execute_action gateway"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_kamino"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
